force-app/main/default/objects/OCE__TimeOffTerritory__c/OCE__TimeOffTerritory__c.object-meta.xml
<CustomObject>
    <description>Defines block of time during normal business hours in which sales representatives are out of their territories</description>
    <label>Time Off Territory</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Time Off Territories</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>