force-app/main/default/objects/OCE__TimeOffTerritory__c/fields/OCE__Duration__c.field-meta.xml
<CustomField>
    <fullName>OCE__Duration__c</fullName>
    <description>Duration of time off event in hours</description>
    <formula>IF(ISPICKVAL(OCE__SpanType__c , &apos;Days&apos;), VALUE(TEXT(OCE__TimeOff__c)) * 8,
IF(ISPICKVAL(OCE__SpanType__c , &apos;Hours&apos;), VALUE(TEXT(OCE__TimeOff__c)),
0
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>