force-app/main/default/objects/OCE__TimeOffTerritory__c/fields/OCE__EndDate__c.field-meta.xml
<CustomField>
    <fullName>OCE__EndDate__c</fullName>
    <description>The date the TOT will end. Used to determine when the Rep&apos;s time off will end. This field auto-calculates based on the Span Type, Holidays, Weekends, and Time Off criteria.</description>
    <inlineHelpText>Calculated automatically</inlineHelpText>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>