force-app/main/default/objects/OCE__TimeOffTerritory__c/fields/OCE__IsUnpaid__c.field-meta.xml
<CustomField>
    <fullName>OCE__IsUnpaid__c</fullName>
    <description>Formula that indicates if time off event is paid or not</description>
    <formula>IF(TEXT(OCE__Type__c) = &quot;Disciplinary&quot;, TRUE,
IF(TEXT(OCE__Type__c) = &quot;Unexcused&quot;, TRUE,
IF(TEXT(OCE__Type__c) = &quot;Vacation&quot;, TRUE,
FALSE
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unpaid</label>
    <type>Checkbox</type>
</CustomField>