force-app/main/default/objects/OCE__TimeOffTerritory__c/fields/OCE__OfflineCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>OCE__OfflineCreatedDate__c</fullName>
    <description>Offline Created Date</description>
    <label>Offline Created Date</label>
    <type>DateTime</type>
</CustomField>