force-app/main/default/objects/OCE__TimeOffTerritory__c/fields/OCE__OfflineLastModifiedByID__c.field-meta.xml
<CustomField>
    <fullName>OCE__OfflineLastModifiedByID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Offline Last Modified By ID</description>
    <label>Offline Last Modified By ID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OfflineLastModifiedByIDs</relationshipName>
    <type>Lookup</type>
</CustomField>