force-app/main/default/objects/OCE__TimeOffTerritory__c/fields/OCE__OfflineUniqueID__c.field-meta.xml
<CustomField>
    <fullName>OCE__OfflineUniqueID__c</fullName>
    <description>Globally unique string that identifies an offline created record.</description>
    <externalId>true</externalId>
    <label>Offline Unique ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>