force-app/main/default/objects/OCE__TimeOffTerritory__c/fields/OCE__Slot__c.field-meta.xml
<CustomField>
    <fullName>OCE__Slot__c</fullName>
    <description>Part of the day for which time off will be picked</description>
    <label>Slot</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Morning</fullName>
            </value>
            <value>
                <fullName>Afternoon</fullName>
            </value>
            <value>
                <fullName>Evening</fullName>
            </value>
            <value>
                <fullName>AllDay</fullName>
                <label>All Day</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>