force-app/main/default/objects/OCE__TimeOffTerritory__c/fields/OCE__SpanType__c.field-meta.xml
<CustomField>
    <fullName>OCE__SpanType__c</fullName>
    <description>The type of time span the Rep will be taking off, either hours or days.</description>
    <label>Span Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Days</fullName>
            </value>
            <value>
                <fullName>Hours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>