force-app/main/default/objects/OCE__TimeOffTerritory__c/fields/OCE__StartDate__c.field-meta.xml
<CustomField>
    <fullName>OCE__StartDate__c</fullName>
    <description>The start date the TOT will occur. Used to determine when the Rep will begin their time off.</description>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>