force-app/main/default/objects/OCE__TimeOffTerritory__c/fields/OCE__StartDateSlot__c.field-meta.xml
<CustomField>
    <fullName>OCE__StartDateSlot__c</fullName>
    <description>Start Date for Slot record type</description>
    <inlineHelpText>Start Date for Slot record type</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>