force-app/main/default/objects/OCE__TimeOffTerritory__c/fields/OCE__StartTimeSlot__c.field-meta.xml
<CustomField>
    <fullName>OCE__StartTimeSlot__c</fullName>
    <description>Start Time for Slot TOTs</description>
    <inlineHelpText>Calculated automatically</inlineHelpText>
    <label>Start Time</label>
    <type>Time</type>
</CustomField>