force-app/main/default/objects/OCE__TimeOffTerritory__c/fields/OCE__Territory__c.field-meta.xml
<CustomField>
    <fullName>OCE__Territory__c</fullName>
    <description>The territory that will be uncovered during the TOT. This is used to understand which territory will be left unattended by the Rep during their time off.</description>
    <label>Territory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>