force-app/main/default/objects/OCE__TimeOffTerritory__c/fields/OCE__TimeOff__c.field-meta.xml
<CustomField>
    <fullName>OCE__TimeOff__c</fullName>
    <description>Depended on Span Type</description>
    <label>Time Off</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>OCE__SpanType__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>