force-app/main/default/objects/OCE__TimeOffTerritory__c/fields/OCE__Type__c.field-meta.xml
<CustomField>
    <fullName>OCE__Type__c</fullName>
    <description>The type of TOT (Holiday,Training,Civic Activity,Personal Absence,Disciplinary,Unexucused, Vacation)</description>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Holiday</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Civic Activity</fullName>
            </value>
            <value>
                <fullName>Personal Absence</fullName>
            </value>
            <value>
                <fullName>Disciplinary</fullName>
            </value>
            <value>
                <fullName>Unexcused</fullName>
            </value>
            <value>
                <fullName>Vacation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>