force-app/main/default/objects/OCE__TimeOffTerritory__c/recordTypes/OCE__Date.recordType-meta.xml
<RecordType>
    <fullName>OCE__Date</fullName>
    <active>false</active>
    <label>Date</label>
</RecordType>