force-app/main/default/objects/OCE__TimeOffTerritory__c/recordTypes/OCE__Slot.recordType-meta.xml
<RecordType>
    <fullName>OCE__Slot</fullName>
    <active>false</active>
    <label>Slot</label>
</RecordType>