force-app/main/default/objects/OCE__TimeOffTerritory__c/recordTypes/OCE__Span.recordType-meta.xml
<RecordType>
    <fullName>OCE__Span</fullName>
    <active>true</active>
    <label>Span</label>
</RecordType>