force-app/main/default/objects/OCE__TimeOffTerritory__c/validationRules/OCE__Start_Date_earlier_than_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>OCE__Start_Date_earlier_than_End_Date</fullName>
    <active>true</active>
    <description>End Date cannot be earlier than Start Date</description>
    <errorConditionFormula>OCE__StartDate__c &gt; OCE__EndDate__c</errorConditionFormula>
    <errorMessage>End Date cannot be earlier than Start Date</errorMessage>
</ValidationRule>